# fishsense-database

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docker-entrypoint-initdb.d/: 01_init_database.sql  02_basic_insert_functions.sql  03_insert_default_vals.sql  04_basic_get_user_functions.sql  05_basic_get_org_functions.sql  06_user_functions.sql  07_delete_functions.sql  08_update_user_functions.sql
fishsense_database/: __main__.py  create_db.py  database.py  image.py  user.py
fishsense_database/scripts/delete_scripts/: delete_org.sql  delete_user.sql
fishsense_database/scripts/get_scripts/get_files_scripts/: id=all&filter=deployment,fish_species.sql  id=all&filter=deployment.sql  id=all&filter=device.sql  id=all&filter=fish_species.sql  id=all&filter=time.sql  org.sql  (+1 more)
fishsense_database/scripts/insert_scripts/: add_user_to_org.sql  create_org.sql  create_user.sql
scripts/: delete_database.sql  init_database.sql
scripts/get_scripts/get_files_scripts/: id=all&filter=device_class.sql  id=all&filter=location.sql  id=all&filter=none.sql  id=uploadeer&filter=none.sql  user_with_fish_species.sql
scripts/get_scripts/get_users_scripts/: get_user_by_username.sql
scripts/insert_scripts/: insert_deployment.sql  insert_device.sql  insert_device_class.sql  insert_file.sql  insert_fish.sql  insert_fish_identity.sql  insert_fish_mask.sql  insert_frame.sql  insert_laser_cal.sql  insert_laser_detection.sql  insert_lens_cal.sql  insert_org_user_mapping.sql  insert_organization.sql  insert_species.sql  insert_storage_pool.sql  insert_user.sql
(+5 files in other folders)
